# EVE_Industry

./: .gitignore  README.md  design_plan.md  pyproject.toml  test_enhanced_export.py  test_export.py
data/initial/: bpcs.yaml  bpos.yaml  facilities.yaml  recipes.yaml
src/eve_industry/: __init__.py  main.py
src/eve_industry/database/: __init__.py  connection.py  loader.py  schema.py
src/eve_industry/gui/: __init__.py  main_window.py
src/eve_industry/gui/dialogs/: __init__.py
src/eve_industry/gui/views/: __init__.py  bpc_inventory_view.py  bpo_list_view.py  facilities_view.py  recipes_view.py  settings_view.py
src/eve_industry/gui/widgets/: __init__.py
src/eve_industry/modules/: __init__.py  bom_tree.py  yaml_handler.py
src/eve_industry/styles/: dark_theme.qss
tests/: __init__.py  test_app_start.py  test_db.py  test_db_simple.py  test_duckdb_syntax.py  test_final.py
